# krp-sharedmemory-plugin

./: CMakeLists.txt  README.md
src/: SharedMemory.h  lib.cpp  lib.h
src/krp/: krp-draw.h  krp-kart.h  krp-race.h  krp-replay.h  krp-track.h
src/logger/: logger.cpp  logger.h
src/memory/: memory.cpp  memory.h
